2004-02-25  Jim Evins  <evins@snaught.com>

	* configure.in:
		Changed version to 2.0pre1cvs
	
	* libglabels/xml-template.c: (gl_xml_template_parse_templates_doc):
		Removed extra xmlFreeDoc() calls upon error.  Also print the doc->URL
		instead of doc->name fields when errors encountered.

2004-02-21  Jim Evins  <evins@snaught.com>

	* data/avery-iso-templates.xml:
		Added aliases for Avery 8651.  Patch provided by Wayne Schuller.
	
	* glabels.spec.in:
		Added libglabels library and include file to installed files.
		
	* configure.in:
		Final prep for 1.93.3.

2004-02-20  Jim Evins  <evins@snaught.com>

	* src/glabels-batch.c: (main):
		Changed key for setting output filename to GNOME_PRINT_KEY_OUTPUT_FILENAME
		as suggested by Javier Donaire Segarra.  This addresses bug #901063.

2004-02-16  Jim Evins  <evins@snaught.com>

	* configure.in:
		If gtk+ >= 2.3.2 then define HAVE_FILE_CHOOSER.
	
	* src/Makefile.am:
		Added HAVE_FILE_CHOOSER to INCLUDES.
	
	* src/file.c: (gl_file_open), (open_response), (gl_file_open_real),
	(gl_file_save_as), (save_as_response):
		Ported to use GtkFileChooserDialog if HAVE_FILE_CHOOSER is defined.

2004-02-16  Jim Evins  <evins@snaught.com>

	* src/xml-label-04.c: (xml04_parse_image_props):
	* src/xml-label-191.c: (xml191_parse_image_props):
	* src/xml-label.c: (xml_parse_object_image):
		Delay setting image size until after image has been applied to new
		object.
	
2004-02-15  Jim Evins  <evins@snaught.com>

	* src/label-barcode.c: (gl_label_barcode_set_data),
	(gl_label_barcode_set_props):
		Don't emit "changed" signal, if no change actually made for these
		methods.  Reduces number of unnecessary redraws of barcodes.
	
	* src/label-object.h:
	* src/label-object.c: (gl_label_object_set_position),
	(gl_label_object_set_position_relative), (set_size),
	(gl_label_object_set_size),
	(gl_label_object_set_size_honor_aspect):
		Don't emit "changed" signal, if no change actually made for these
		methods.
